# ros2_audio_stack

./: LICENSE  README.md
ros2_audio_stack/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ros2_audio_stack/data/: speech_records.db
ros2_audio_stack/launch/: audio_stack_launch.py
ros2_audio_stack/ros2_audio_stack/nodes/: asr_node.py  audio_capture.py  audio_file_capture.py  audio_player_node.py  classifier_node.py  recorder_node.py  vad_node.py
