<?xml version="1.0"?>
<package format="3">
<name>ros2_audio_stack</name>
<version>0.1.0</version>
<description>ROS2 Rolling audio stack: capture -> VAD -> ASR -> classifier -> recorder (Python)</description>
<maintainer email="you@example.com">Your Name</maintainer>
<license>Apache-2.0</license>
<depend>rclpy</depend>
<depend>std_msgs</depend>
<exec_depend>sounddevice</exec_depend>
<exec_depend>numpy</exec_depend>
<exec_depend>webrtcvad</exec_depend>
<exec_depend>vosk</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>